--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="_9dls js-focus-visible _aa4c">
 <head>
   <meta charset="utf-8">
   <title>InstagramDev</title>
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="_a3wf system-fonts--body sf">
   <app-root></app-root>
 </body>
 </html>
